refactor(cogito/templates/predict_class_template.jinja2): Remove single argument prediction method and update docstrings for new predict function structure
- Modify the predict method to accept keyword arguments or positional arguments with default values
- Update docstrings to reflect changes in predict method parameters and return type
- Add TODO comments for user implementation of setup and predict methods
- Ensure compatibility with existing routes that do not require an explicit response type
- Remove unused code related to the old predict method signature

--- a/cogito/templates/predict_class_template.jinja2
+++ b/cogito/templates/predict_class_template.jinja2
@@ -30,9 +30,9 @@ class {{ route.class_name }}(BasePredictor):
         pass
 
     {% if route.class_data.args %}
-    def predict(self, {% for arg in route.class_data.args %}{{ arg.name }}: {{ arg.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> PredictResponse:
+    def predict(self, {% for arg in route.class_data.args %}{{ arg.name }}: {{ arg.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> {% if route.class_data.response %}{{ route.class_data.response.type }}{% else %}None{% endif %}:
     {% else %}
-    def predict(self, *args, **kwargs) -> PredictResponse:
+    def predict(self, *args, **kwargs) -> {% if route.class_data.response %}{{ route.class_data.response.type }}{% else %}None{% endif %}:
     {%- endif %}
         """
         This method is called for each prediction request.
