chore: Refactor project structure and reorganize files
   - Move Cogito related files to inferia directory
   - Delete Cogito directory
   - Remove unnecessary import statements from examples/example.py
   - Create new files for Inferia API handlers, CLI, core exceptions, and logging
   - Update .github/workflows/publish-to-pypi-and-test-pypi.yml to reflect changes in project name
   - Delete unnecessary files from cogito and inferia directories
   - Create a new file for Inferia core models

--- a/inferia/templates/predict_class_template.jinja2
+++ b/inferia/templates/predict_class_template.jinja2
@@ -1,4 +1,4 @@
-from cogito import BasePredictor
+from inferia import BasePredictor
 
 {% for route in routes %}
 class {{ route.class_name }}(BasePredictor):
