fix(inferia/templates/predict_class_template.jinja2): Make setup method asynchronous and remove unused comments
- Change setup method to an async function
- Remove unnecessary TODO comments for setup and predict methods
- Implement pass statement in predict method if no response is expected

--- a/inferia/templates/predict_class_template.jinja2
+++ b/inferia/templates/predict_class_template.jinja2
@@ -20,7 +20,7 @@ class {{ route.class_name }}(BasePredictor):
     {%- endif %}
     """
 
-    def setup(self):
+    async def setup(self):
         """
         This method is called once before the first prediction is made.
         """
