Cogito come back

--- a/cogito/templates/predict_class_template.jinja2
+++ b/cogito/templates/predict_class_template.jinja2
@@ -1,4 +1,4 @@
-from inferia import BasePredictor
+from cogito import BasePredictor
 
 {% for route in routes %}
 class {{ route.class_name }}(BasePredictor):
