--- a/cogito/templates/predict_class_template.jinja2
+++ b/cogito/templates/predict_class_template.jinja2
@@ -8,16 +8,6 @@ class {{ route.class_name }}(BasePredictor):
         {{ route.class_data.description | indent(8) }}
     Route path: {{ route.class_data.path }}
     Tags: {{ route.class_data.tags }}
-    {%- if route.class_data.args %}
-    Args:
-        {%- for arg in route.class_data.args %}
-        {{ arg.name }}: {{ arg.type }} - {{ arg.description }}
-        {%- endfor %}
-    {%- endif %}
-    {%- if route.class_data.response %}
-    Response:
-        {{ route.class_data.response.type }} - {{ route.class_data.response.description }}
-    {%- endif %}
     """
 
     async def setup(self):
@@ -29,23 +19,23 @@ class {{ route.class_name }}(BasePredictor):
 
         pass
 
-    {% if route.class_data.args %}
-    def predict(self, {% for arg in route.class_data.args %}{{ arg.name }}: {{ arg.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> {% if route.class_data.response %}{{ route.class_data.response.type }}{% else %}None{% endif %}:
-    {% else %}
-    def predict(self, *args, **kwargs) -> {% if route.class_data.response %}{{ route.class_data.response.type }}{% else %}None{% endif %}:
-    {%- endif %}
+    def predict(self, prompt: str, temperature: float, steps: int) -> string:
         """
-        This method is called for each prediction request.
+
+        # TODO: (USER) Implement the predict method for inference using your parameters
+        This method is called for each prediction request. 
+        
+        Parameters:
+            prompt (str): The prompt to generate text from.
+            temperature (float): The temperature setting for generation.
+            steps (int): The number of steps in the generation process.
+            
+        Returns:
+            bool: True if the prediction was successful, False otherwise.
         """
 
         # TODO: (USER) Implement the predict method for inference
-        {% if route.class_data.response %}
-        my_response: {{ route.class_data.response.type }}
-        # TODO: (USER) set the value of my_response based on its type
-        return my_response
-        {% else %}
-        pass
-        {%- endif %}
-
+        # TODO: (USER) set the value of result based on inference logic
+        return f"Executed {prompt} with temperature {temperature} and steps {steps}"
 
 {% endfor %}
