fix: Fixes predict function return type in jinja template

--- a/cogito/templates/predict_class_template.jinja2
+++ b/cogito/templates/predict_class_template.jinja2
@@ -19,7 +19,7 @@ class {{ route.class_name }}(BasePredictor):
 
         pass
 
-    def predict(self, prompt: str, temperature: float, steps: int) -> string:
+    def predict(self, prompt: str, temperature: float, steps: int) -> str:
         """
 
         # TODO: (USER) Implement the predict method for inference using your parameters
